# chiwawa

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md  crates.js  dump  help.html  index.html  mandelbrot.wat  settings.html  src-files.js  stackdump  test-wasmedge.sh  test-wasmtime.sh
.cargo/: config-legacy-threads.toml  config-legacy.toml  config-tco-threads.toml  config-tco.toml  config-wasmedge-legacy.toml  config-wasmedge-tco.toml  config-wasmedge.toml  config-wasmtime-legacy.toml  config-wasmtime-tco.toml  config.toml
benchmarks/: Cargo.toml  pi_benchmark.sh  read_benchmark.sh  rss_benchmark.sh  write_benchmark.sh
chiwawa/: all.html  index.html  sidebar-items.js
doc/: architecture.md  checkpoint.md  dtc.md  dtc_en.md  folding.md  interpreter.md  migration.md  registers.md  superinstructions.md  tco.md
search.index/: 01d54674ec83.js  020560ac2576.js  02fb97cdbe72.js  030059c66fb1.js  040526bce1d2.js  0490229de5f8.js  06bb718214b6.js  079752fcda56.js  093ada23a1db.js  0950c65d5b21.js  0b4dc7574f11.js  0cdb80809168.js  0ea680809df3.js  0f1a28a2abd5.js  11bc0012698a.js  1255071989b9.js  12c1bb293865.js  13844ecb6ca7.js  13a5192b9a46.js  145a82966698.js  150c70cdda8b.js  153d25e76bfe.js  15f4ee058e2e.js  1705bad00901.js  176aae2230e4.js  196df50640c2.js  19df628bf430.js  1c6b4b7fe90b.js  1f3b58edc63b.js  2077ed211715.js  20de979e21b9.js  2153a3cf5a79.js  216198841cee.js  237fede39b81.js  23908ccd633f.js  2433528b208d.js  255f691c88be.js  257d8167c9ef.js  258dd8b80a45.js  25cc37741018.js  (+95 more)
src/: error.rs  execution.rs  instructions.rs  intercept.rs  lib.rs  (+8 more)
(+580 files in other folders)
