[package]
name = "PPWasm"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
wasi-common = "2.0"
wasi-cap-std-sync = "2.0"
wasmi = "0.32.0"
wasmi_wasi = "0.32.0"
wasmer = "4.3.1"
wat = "1.0.71"
wasmer-wasix = "0.21.0"
wasmer-wasi = "3.1.1"
tokio = "1.38.0"
thiserror = "1.0.61"
clap = { version = "4.5.7", features = ["derive"] }
