[package]
name = "chiwawa"
version = "0.1.0"
edition = "2021"

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
clap = { version = "4.5.7", features = ["derive"] }
fancy-regex = "0.14.0"
lazy_static = "1.5.0"
maplit = "1.0.2"
num = "0.4.3"
rmp = "0.8.14"
thiserror = "1.0.61"
typenum = "1.17.0"
wasmparser = "0.210.0"
wat = "1.212.0"
