[package]
name = "chiwawa"
version = "0.1.0"
edition = "2021"

[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
debug = false
panic = "abort"

[features]
wasmtime = []
wasmedge = []

[dependencies]
anyhow = "1.0.86"
byteorder = "1.5.0"
clap = { version = "4.5.7", features = ["derive"] }
fancy-regex = "0.14.0"
getrandom = "0.2"
lazy_static = "1.5.0"
maplit = "1.0.2"
num = "0.4.3"
rmp = "0.8.14"
thiserror = "1.0.61"
typenum = "1.17.0"
wasmparser = "0.210.0"
wat = "1.212.0"
serde = { version = "1.0", features = ["derive"] }
bincode = "1.3"
rustc-hash = "2.0"
itertools = "0.13"
